force-app/main/default/objects/Budget_Plug_Area_Allocation__c/Budget_Plug_Area_Allocation__c.object-meta.xml
<CustomObject>
    <description>Related list to Financials that records the Area&apos;s percentage of the plug</description>
    <label>Budget Plug Area Allocation</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Budget Plug Area Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Plug Area Allocation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>