force-app/main/default/objects/Budget_Plug_Area_Allocation__c/fields/Plug_Account__c.field-meta.xml
<CustomField>
    <fullName>Plug_Account__c</fullName>
    <label>Plug Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget Plug Area Allocation</relationshipLabel>
    <relationshipName>Budget_Plug_Area_Allocation1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>