force-app/main/default/objects/Budget_Plug_Area_Allocation__c/fields/Plug_Amount__c.field-meta.xml
<CustomField>
    <fullName>Plug_Amount__c</fullName>
    <label>Plug Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>