force-app/main/default/objects/Budget_Plug_Area_Allocation__c/fields/Plug_Area_01__c.field-meta.xml
<CustomField>
    <fullName>Plug_Area_01__c</fullName>
    <label>01 - Eastern New England</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>