force-app/main/default/objects/Budget_Plug_Area_Allocation__c/fields/Plug_Area_02__c.field-meta.xml
<CustomField>
    <fullName>Plug_Area_02__c</fullName>
    <label>02 - Western New England &amp; New York</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>