force-app/main/default/objects/Budget_Plug_Area_Allocation__c/fields/Plug_Area_03__c.field-meta.xml
<CustomField>
    <fullName>Plug_Area_03__c</fullName>
    <label>03 - Pennsylvania &amp; New Jersey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>