force-app/main/default/objects/Budget_Plug_Area_Allocation__c/fields/Plug_Owner__c.field-meta.xml
<CustomField>
    <fullName>Plug_Owner__c</fullName>
    <description>Person Assigned Plug</description>
    <formula>Plug_Account__r.Account_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Person Assigned Plug</inlineHelpText>
    <label>Plug Owner</label>
    <type>Text</type>
</CustomField>