force-app/main/default/objects/Budget_Plug_Area_Allocation__c/fields/Plug_Product__c.field-meta.xml
<CustomField>
    <fullName>Plug_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Line of Business being with growth Plug</description>
    <inlineHelpText>Line of Business being with growth Plug</inlineHelpText>
    <label>Plug Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Budget Plug Area Allocation</relationshipLabel>
    <relationshipName>Budget_Plug_Area_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>