force-app/main/default/objects/Budget_Plug_Area_Allocation__c/fields/Plug_Product_LOB_Code__c.field-meta.xml
<CustomField>
    <fullName>Plug_Product_LOB_Code__c</fullName>
    <formula>Plug_Product__r.LOB_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plug Product LOB Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>